--- a/angular/angular.json
+++ b/angular/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "2f3c516d-e624-451a-ba4e-ddc502a77034"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
